# MKS-interpreter

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  MEMORY_AUDIT.md  Makefile  PKGBUILD  README.md  REVIEW.md  bench.mks  create_test.sh  example_string_builder_perf.mks  gen_hashes  main.c  main.h  math.mks  methods.txt  mks_module.h  mks_run  pointers.mks  report.md  smoke.mks  string_builder.c  string_concat_bench.mks  string_concat_bench_100k.mks  string_concat_bench_1m.mks  string_concat_bench_500k.mks  test.mks  test2.mks  test3.mks  test_all.mks  test_string_builder.mks  test_string_builder_advanced.mks  tests.sh
.agent/: PLANS.md  README.md  lessons.md  loop.md  review.md
.agent/skills/PLAN/: skill.md
.agent/skills/audit/: skill.md
.agent/skills/learn/: skill.md
.agent/skills/review/: skill.md
.agent/styles/: architect.md  auto-style.md  lowlevel.md  minimalism.md  paranoid_gc.md  performance.md  reviewer.md  tester.md
.claude/agents/vm-optimizer/: vm-optimizer.md
.claude/skills/core-architect/: SKILL.md
.claude/skills/mks-toolings/: SKILL.md
.claude/skills/vm-optimizer/: SKILL.md
.github/workflows/: ci.yml  cmake-multi-platform.yml
.jules/: bolt.md
Eval/: eval.c  eval.h  eval_index.c  eval_index.h
GC/: gc.c  gc.h
GGui/: README.md  package.pkg
GGui/examples/: break.mks  bub  bub.c  bub.mks  bub.py  bubs.mks  demo.mks  for.mks  func.mks  local_co.mks  local_var.mks  snake.mks  string_con.mks  while.mks  while2.mks
GGui/src/: core.mks  lib.mks  screen.mks  widgets.mks
Gui/: package.pkg
Gui/src/: lib.mks
Lexer/: lexer.c  lexer.h
MKS-interpreter/: config  packed-refs
MKSTestProjects/todo_file/: README.md  main.mks  todos.json
Parser/: AST.c  AST.h  parser.c  parser.h  parser_core.c  parser_expr.c  parser_stmt.c
Runtime/: context.c  context.h  control_flow.c  control_flow.h  errors.c  errors.h  extension.c  extension.h  functions.c  functions.h  indexing.c  indexing.h  methods.c  methods.h  methods_cache.h  module.c  module.h  module_toml.c  module_toml.h  operators.c  operators.h  output.c  output.h  pointers.c  pointers.h  profiler.c  profiler.h  runner.c  runner.h  value.c  value.h  watch.c  watch.h
Utils/: file.c  file.h  hash.c  hash.h
VM/: vm.h  vm_chunk.c  vm_chunk.h  vm_compile.c  vm_compile_can.c  vm_compile_can.h  vm_compile_internal.h  vm_compile_scope.c  vm_compile_scope.h  vm_dump.c  vm_exec.c  vm_peephole.c  vm_peephole.h  vm_predict.h
VM-Test/: vm_fallback_demo.mks  vm_subset_demo.mks
agents/: LANGUAGE_DIRECTION.md  PLANS.md
agents/.agent/: lessons.md  loop.md  review.md
benchmarks/: array.mks  array.py  fib.mks  fib.py  loop.mks  loop.py  string.mks  string.py  string_gc.mks
benchmarks/mks/: ackermann.mks  array_access.mks  array_churn.mks  array_push_pop.mks  basic_loop.mks  bubble_sort.mks  fib_30.mks  func_call_overhead.mks  gc_churn.mks  if_else_chain.mks  logic_ops.mks  math_ops.mks  matmul_deep.mks  method_call_overhead.mks  nested_arrays.mks  nested_loops.mks  prime_count.mks  recursion_depth.mks  sieve.mks  string_concat.mks  string_heavy_concat.mks  string_indexing.mks  string_methods.mks  var_access.mks
benchmarks/python/: ackermann.py  array_access.py  array_churn.py  array_push_pop.py  bubble_sort.py  fib_30.py  func_call_overhead.py  gc_churn.py  if_else_chain.py  logic_ops.py  math_ops.py  matmul.py  method_call_overhead.py  nested_arrays.py  nested_loops.py  prime_count.py  sieve.py  string_concat.py  string_heavy_concat.py  string_indexing.py  string_methods.py  var_access.py
build-asan/: Makefile
build_asan/: Makefile
docs/: ARCHITECTURE.md  DECISIONS.md  ERROR_CODES.md  GC_INVARIANTS.md  GGUI.md  NATIVE_MODULES.md  PACKAGES.md  REFERENCE.md  RELEASES.md  RELEASE_0.3_ALPHA.md  SEMANTICS.md  TEST_POLICY.md  USER_GUIDE.md
env/: env.c  env.h
errorstest/: 01_syntax_missing_expression.mks  02_undefined_variable.mks  03_wrong_function_args.mks  04_array_index_out_of_bounds.mks  05_property_on_non_object.mks  06_type_mismatch_binop.mks  07_unknown_method.mks  08_module_not_found.mks  test.mks
examples/: ggui_fs_demo.mks  std_math_example.mks  todo_tui.mks
mks_modules/string_builder/: IMPLEMENTATION.md  README.md  SUMMARY.md
std/: array.mks  bool.mks  fs.c  io.c  io.h  math.c  math.h  math.mks  path.c  path.h  process.c  random.c  random.h  registry.c  std.mks  string.mks  time.c  time.h  time.mks  tty.c  tty.h  watch.c  watch.h
tests/cases/: arithmetic_01.mks  array_empty_01.mks  array_methods_01.mks  arrays_01.mks  comparison_01.mks  conversions_01.mks  defer_watch_01.mks  else_if_01.mks  entity_01.mks  extend_array_01.mks  extend_import_once_01.mks  for_01.mks  functions_01.mks  if_01.mks  inc_decrement_01.mks  logic_01.mks  loop_control_01.mks  math.mks  module_relative_restore_01.mks  nested_01.mks  nested_arrays_01.mks  null_01.mks  recursion_01.mks  return_if_01.mks  std_bool_01.mks  std_io_01.mks  std_json_01.mks  std_math_01.mks  std_path_01.mks  std_process_01.mks  string_empty_01.mks  string_methods_01.mks  strings_01.mks  switch_01.mks  using_01.mks  vm_arithmetic_01.mks  vm_arrays_01.mks  vm_break_continue_01.mks  vm_builder_alias.mks  vm_builder_for.mks  (+31 more)
tests/expected/: arithmetic_01.txt  array_methods_01.txt  conversions_01.txt  defer_watch_01.txt  entity_01.txt  extend_import_once_01.txt  loop_control_01.txt  main_mkspkg_script_01.txt  main_package_pkg_01.txt  module_relative_restore_01.txt  null_01.txt  std_io_01.txt  std_json_01.txt  std_math_01.txt  std_path_01.txt  string_methods_01.txt  strings_01.txt  switch_01.txt  using_01.txt  vm_arithmetic_01.txt  vm_arrays_01.txt  vm_counted_loop_defer_body_guard.txt  vm_counted_loop_defer_outer_guard.txt  vm_counted_loop_watch_guard.txt  vm_counted_loop_watch_mod_filter.txt  vm_deep_recursion_expr_stack_01.txt  vm_defer_01.txt  vm_global_fast_01.txt  vm_if_else_01.txt  vm_methods_01.txt  vm_object_01.txt  vm_pointer_01.txt  vm_swap_01.txt  vm_test_01.txt  vm_using_01.txt
tests/fixtures/module_restore/: b.mks
tests/unit/: README.md  test_runtime.c
tools/: benchmark.py  gen_hashes.c  release.sh
(+20 files in other folders)
